--- a/newCascadeStyleSheet.css
+++ b/newCascadeStyleSheet.css
@@ -1,10 +1,5 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 12-Sep-2017, 10:20:19
-    Author     : ozols
-*/
-
+body {
+    background-color: #666;
+    font-family: sans-serif;
+    color: #fff;
+}
